crates/runtime/tests/schema_evolution/snapshots/integration__schema_evolution__test_file_update_csv_cayenne__initial.snap
---
source: crates/runtime/tests/schema_evolution/mod.rs
expression: "to_pretty_display(&record_batch).expect(\"pretty display\")"
---
+----+-------+-----+---------------+
| id | name  | age | city          |
+----+-------+-----+---------------+
| 1  | Alice | 30  | New York      |
| 2  | Bob   | 25  | San Francisco |
+----+-------+-----+---------------+
